build: api documentation
transaction and report endpoint
